<resources>
  <string name="app_name">Monday</string>
  <string name="english">English</string>
  <string name="create_new_account">Create new account</string>
  <string name="login">Login</string>
  <string name="login_in">Log in</string>
  <string name="enter_your_email">Enter your email</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="title_activity_home">Boards</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_boards">Boards List</string>
  <string name="menu_inbox">Inbox</string>
  <string name="menu_notifications">Notifications</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="contact_us">Contact Us</string>
  <string name="settings">Settings</string>
  <string name="boards">Boards</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
  <string name="no_connection_msg">no internet connection</string>
  <string name="continu">Continue</string>
  <string name="change_password">Change Password</string>
  <string name="old_password">Old Password</string>
  <string name="new_password">New Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="confirm_password_msg">confirm your password</string>
  <string name="valid_input_msg">enter all fields</string>
  <string name="sign_out">Log Out</string>
  <string name="arabaic">Arabic</string>
  <string name="type_message">Type Message Here</string>


  <!-- TODO: Remove or change this placeholder text -->
  <string name="sort_ascending">Sort Ascending</string>
  <string name="sort_descending">Sort Descending</string>
  <string name="hiding_row_sample">Hiding 3. Row Sample</string>
  <string name="showing_row_sample">Showing 3. Row Sample</string>
  <string name="scroll_to_column_position">Scroll to 15. column position</string>
  <string name="scroll_to_row_position">Scroll to 5. row position</string>
  <string name="show_hide_the_column">Showing / Hiding 1. column</string>
  <string name="table_pagination_details">Page %s, showing items %s - %s.</string>

  <string-array name="moods">
    <item />
    <item>Happy</item>
    <item>Sad</item>
  </string-array>

  <string-array name="gender">
    <item />
    <item>Male</item>
    <item>Female</item>
  </string-array>

  <string-array name="items_per_page">
    <item>10</item>
    <item>20</item>
    <item>25</item>
    <item>50</item>
    <item>All</item>
  </string-array>


</resources>
