<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="true"
  android:orientation="vertical"
  android:paddingStart="@dimen/_16sdp"
  android:paddingTop="@dimen/_20sdp"
  android:paddingEnd="@dimen/_16sdp"
  android:paddingBottom="@dimen/_20sdp"
  tools:context=".ui.activities.LoginActivity">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="back"
    android:src="@drawable/ic_arrow_gray_black" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_8sdp"
    android:text="@string/login_in"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textColor="#D2000000"
    android:textStyle="bold" />

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_15sdp"
    android:background="@android:color/transparent">

    <EditText
      android:id="@+id/etUserEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:hint="@string/enter_your_email"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:paddingStart="@dimen/_5sdp"
      android:paddingEnd="@dimen/_5sdp"
      android:singleLine="true"
      android:textColor="#535151"
      android:textColorHighlight="@android:color/white"
      android:textColorHint="#000" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:background="@android:color/transparent"
    android:visibility="gone">

    <EditText
      android:id="@+id/etUserPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:hint="@string/enter_your_password"
      android:inputType="textPassword"
      android:maxLines="1"
      android:paddingStart="@dimen/_5sdp"
      android:paddingEnd="@dimen/_5sdp"
      android:singleLine="true"
      android:textColor="#535151"
      android:textColorHighlight="@android:color/white"
      android:textColorHint="#000" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnLogin"
    style="@style/my_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginTop="@dimen/_26sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    android:enabled="false"
    android:onClick="login"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:text="@string/login_in"
    android:textAllCaps="false"
    app:cornerRadius="@dimen/_18sdp" />
</LinearLayout>