<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingStart="@dimen/_16sdp"
  android:paddingTop="@dimen/_26sdp"
  android:paddingEnd="@dimen/_16sdp"
  android:paddingBottom="@dimen/_26sdp"
  tools:context=".IntroScreenActivity">

  <TextView
    android:id="@+id/tvLanguage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_language"
    android:drawablePadding="@dimen/_6sdp"
    android:gravity="center|start"
    android:text="@string/arabaic"
    android:textColor="@color/baseic_texts_buttons"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.viewpager.widget.ViewPager
    android:id="@+id/view_pager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="@dimen/_30sdp"
    app:layout_constraintBottom_toTopOf="@id/indicator"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvLanguage"
    app:layout_constraintVertical_bias="0.83" />

  <com.pixelcan.inkpageindicator.InkPageIndicator
    android:id="@+id/indicator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_24sdp"
    app:ipi_currentPageIndicatorColor="@color/colorAccent"
    app:ipi_pageIndicatorColor="@color/gray_light"
    app:layout_constraintBottom_toTopOf="@id/line1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/view_pager"
    app:layout_constraintVertical_bias="0.82" />

  <LinearLayout
    android:id="@+id/line1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="21dp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/indicator">

    <com.google.android.material.button.MaterialButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingStart="@dimen/_46sdp"
      android:paddingTop="@dimen/_10sdp"
      android:paddingEnd="@dimen/_46sdp"
      android:paddingBottom="@dimen/_10sdp"
      android:text="@string/create_new_account"
      android:textAllCaps="false"
      app:cornerRadius="@dimen/_18sdp" />

    <TextView
      android:id="@+id/tvLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/_12sdp"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:focusable="true"
      android:onClick="login"
      android:padding="@dimen/_6sdp"
      android:text="@string/login"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/baseic_texts_buttons"
      android:textStyle="bold" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>