<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageButton
    android:id="@+id/imageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16sdp"
    android:background="?attr/selectableItemBackground"
    android:onClick="finish"
    android:src="@drawable/ic_arrow_gray_green"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.93"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/image"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_60sdp"
    android:layout_marginTop="@dimen/_36sdp"
    android:background="@android:color/transparent"
    android:src="@drawable/monday_logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageButton" />

  <!--    <TextView-->
  <!--        android:id="@+id/text"-->
  <!--        android:layout_width="match_parent"-->
  <!--        android:layout_height="wrap_content"-->
  <!--        android:layout_marginTop="@dimen/_20sdp"-->
  <!--        android:gravity="center"-->
  <!--        android:text="@string/get_moving"-->
  <!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
  <!--        android:textColor="@color/blue"-->
  <!--        android:textStyle="bold"-->
  <!--        app:layout_constraintTop_toBottomOf="@id/image" />-->

  <!--    <TextView-->
  <!--        android:id="@+id/text2"-->
  <!--        android:layout_width="match_parent"-->
  <!--        android:layout_height="wrap_content"-->
  <!--        android:layout_marginTop="@dimen/_20sdp"-->
  <!--        android:gravity="center"-->
  <!--        android:text="@string/enter_your_mob_msg"-->
  <!--        app:layout_constraintTop_toBottomOf="@id/text" />-->

  <TextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16sdp"
    android:text="@string/change_password"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@color/colorPrimaryDark"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/image" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="@dimen/_36sdp"
    android:layout_marginEnd="24dp"
    app:cardCornerRadius="@dimen/_18sdp"
    app:cardElevation="@dimen/cardview_card_elevation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text"
    app:layout_constraintVertical_bias="0.3">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_16sdp"
      android:layout_marginEnd="@dimen/_16sdp"
      android:background="@android:color/transparent"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textSize="13sp" />
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/card2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginEnd="24dp"
    app:cardCornerRadius="@dimen/_18sdp"
    app:cardElevation="@dimen/cardview_card_elevation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/card1"
    app:layout_constraintVertical_bias="0.3">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_16sdp"
      android:layout_marginEnd="@dimen/_16sdp"
      android:background="@android:color/transparent"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="13sp" />
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/card3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginEnd="24dp"
    app:cardCornerRadius="@dimen/_18sdp"
    app:cardElevation="@dimen/cardview_card_elevation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/card2"
    app:layout_constraintVertical_bias="0.3">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_16sdp"
      android:layout_marginEnd="@dimen/_16sdp"
      android:background="@android:color/transparent"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="13sp" />
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnContinue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_34sdp"
    android:layout_marginEnd="@dimen/_34sdp"
    android:onClick="done"
    android:text="@string/continu"
    android:textAllCaps="false"
    app:cornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/card3"
    app:layout_constraintVertical_bias="0.57" />

</androidx.constraintlayout.widget.ConstraintLayout>